[r=blake-rouse][bug=1465737][author=ricgard] Applied changes to actions; zone placement, add mac button, consistent button sizes, feedback spacing.

--- a/src/maasserver/static/scss/maas/components/_forms.scss
+++ b/src/maasserver/static/scss/maas/components/_forms.scss
@@ -269,6 +269,10 @@ form {
         }
     }
 
+    &:last-of-type {
+        margin-bottom: 0;
+    }
+
     label {
         display: inline-block;
         float: none;
@@ -323,7 +327,6 @@ form {
          * Required to fix the inline block invisible margin
          */
         font-size: 16px;
-        margin-top: 10px;
     }
 
     .icon {
