--- a/src/maasserver/static/scss/maas/layout/_headers.scss
+++ b/src/maasserver/static/scss/maas/layout/_headers.scss
@@ -386,7 +386,7 @@ header.banner {
             border-top: 1px dotted #888;
             display: inline-block;
             width: 100%;
-            padding: 13px 0;
+            padding: 20px 0;
 
             .page-header__feedback-message {
                 @include box-sizing();
